force-app/main/default/objects/Contract__c/fields/ERP_Ship_To_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_To_Account_Number__c</fullName>
    <description>The ship to account number in ERP</description>
    <formula>Ship_To__r.Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Ship To Account Number</label>
    <type>Text</type>
</CustomField>