force-app/main/default/objects/Contract__c/fields/ERP_Ship_To_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_To_Address_ID__c</fullName>
    <formula>Ship_To__r.ERP_Ship_To_Address_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Ship To Address ID</label>
    <type>Text</type>
</CustomField>