force-app/main/default/objects/Contract__c/fields/ERP_Ship_to_Party__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_to_Party__c</fullName>
    <description>The ship to party in ERP</description>
    <formula>ERP_Ship_To_Customer_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Ship to Party</label>
    <type>Text</type>
</CustomField>