force-app/main/default/objects/Contract__c/fields/ERP_Ship_To_Site__c.field-meta.xml
<CustomField>
    <fullName>ERP_Ship_To_Site__c</fullName>
    <description>The ship to site in ERP</description>
    <formula>ERP_Ship_To_Address_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Ship To Site</label>
    <type>Text</type>
</CustomField>