force-app/main/default/objects/Contract__c/fields/ERP_Submitted_to_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Submitted_to_Sync__c</fullName>
    <label>ERP Submitted to Sync</label>
    <type>DateTime</type>
</CustomField>