force-app/main/default/objects/Contract__c/fields/ERP_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>ERP_Task_Number__c</fullName>
    <description>Task number for the project in ERP

Maps to /mergeContract/contractHeader/ContractLine/ProjectContractLineInternalAttributes/ReceiverTaskName</description>
    <inlineHelpText>Please specify EN for a customer contract. For an ICO contract, please specify ICO-Entity Code.</inlineHelpText>
    <label>ERP Task Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>