force-app/main/default/objects/Contract__c/fields/ERP_TAX_Classification_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_TAX_Classification_Code__c</fullName>
    <label>ERP TAX Classification Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>