force-app/main/default/objects/Contract__c/fields/ERP_Update_Revenue_Method__c.field-meta.xml
<CustomField>
    <fullName>ERP_Update_Revenue_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERP Update Revenue Method</label>
    <type>Checkbox</type>
</CustomField>