force-app/main/default/objects/Contract__c/fields/Exempt_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Certificate__c</fullName>
    <label>Exempt Certificate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>