force-app/main/default/objects/Contract__c/fields/Full_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Contract_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Full Contract ID</label>
    <type>Text</type>
</CustomField>