force-app/main/default/objects/Contract__c/fields/HL_Entity__c.field-meta.xml
<CustomField>
    <fullName>HL_Entity__c</fullName>
    <label>HL Entity Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>