force-app/main/default/objects/Contract__c/fields/HL_LOB__c.field-meta.xml
<CustomField>
    <fullName>HL_LOB__c</fullName>
    <label>HL LOB</label>
    <length>20</length>
    <type>Text</type>
</CustomField>