force-app/main/default/objects/Contract__c/fields/HL_Location__c.field-meta.xml
<CustomField>
    <fullName>HL_Location__c</fullName>
    <label>HL Location</label>
    <length>160</length>
    <type>Text</type>
</CustomField>