force-app/main/default/objects/Contract__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Group Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>