force-app/main/default/objects/Contract__c/fields/Is_Main_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the contract is the main contract for an engagement contract. If there is more than one contract, we would like to identify the main contract. This does not apply to ICO contracts.</description>
    <inlineHelpText>This indicates this contract is the main contract for an engagement contract type.</inlineHelpText>
    <label>Is Main Contract</label>
    <type>Checkbox</type>
</CustomField>