force-app/main/default/objects/Contract__c/fields/Legal_Cap__c.field-meta.xml
<CustomField>
    <fullName>Legal_Cap__c</fullName>
    <label>Legal Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>