force-app/main/default/objects/Contract__c/fields/Method_Classification__c.field-meta.xml
<CustomField>
    <fullName>Method_Classification__c</fullName>
    <label>Method Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Billed</fullName>
                <default>true</default>
                <label>As Billed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>