force-app/main/default/objects/Contract__c/fields/OppEngStatus__c.field-meta.xml
<CustomField>
    <fullName>OppEngStatus__c</fullName>
    <formula>IF(
NOT(ISBLANK(Engagement__c)),
Engagement__r.Status__c,

IF(
NOT(ISBLANK(Opportunity__c)) &amp;&amp;
ISBLANK(Engagement__c),
Opportunity__r.Status__c,
&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp/Eng Status</label>
    <type>Text</type>
</CustomField>