force-app/main/default/objects/Contract__c/fields/Product_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Code__c</fullName>
    <label>Product Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>