force-app/main/default/objects/Contract__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Engagement__c)),
NOT(ISBLANK(Engagement__c))),
Engagement__r.ERP_Project_Name__c,
Opportunity__r.ERP_Project_Name__c)</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>