force-app/main/default/objects/Contract__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract (Account)</relationshipLabel>
    <relationshipName>ContractShipTo</relationshipName>
    <type>Lookup</type>
</CustomField>