force-app/main/default/objects/Contract__c/validationRules/Billing_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contract</fullName>
    <active>true</active>
    <description>Bill Contact Shouldn&apos;t be changed on Contract Level</description>
    <errorConditionFormula>AND(
   $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
   ISCHANGED(Bill_To__c),
   ISPICKVAL(ERP_Contract_Type__c,&quot;Engagement&quot;)

   
)</errorConditionFormula>
    <errorMessage>Billing Contact Must be added on Opportunity Contact/ Engagement Contract</errorMessage>
</ValidationRule>