force-app/main/default/objects/Contract__c/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contract_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Bill_To__c</columns>
    <columns>ERP_Contract_Type__c</columns>
    <columns>ERP_Legal_Entity__c</columns>
    <columns>ERP_Last_Integration_Status__c</columns>
    <columns>ERP_Last_Integration_Response_Date__c</columns>
    <columns>ERP_Last_Integration_Error_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>