force-app/main/default/objects/Contract__c/listViews/Contracts_Not_Sync_Contact_Not_Synced.listView-meta.xml
<ListView>
    <fullName>Contracts_Not_Sync_Contact_Not_Synced</fullName>
    <columns>NAME</columns>
    <columns>Contract_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Bill_To__c</columns>
    <columns>Billing_Contact__c</columns>
    <columns>ERP_Contract_Type__c</columns>
    <columns>ERP_Legal_Entity__c</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ERP_Last_Integration_Status__c</columns>
    <columns>ERP_Last_Integration_Response_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ERP_Bill_To_Contact_Id__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ERP_Submitted_to_Sync__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ERP_Last_Integration_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Contracts Not Sync (Contact Not Synced)</label>
</ListView>