force-app/main/default/objects/Contract__c/listViews/Contracts_with_Oracle_Sync_Errors.listView-meta.xml
<ListView>
    <fullName>Contracts_with_Oracle_Sync_Errors</fullName>
    <columns>NAME</columns>
    <columns>Contract_Number__c</columns>
    <columns>Client__c</columns>
    <columns>Bill_To__c</columns>
    <columns>ERP_Contract_Type__c</columns>
    <columns>ERP_Legal_Entity__c</columns>
    <columns>ERP_Last_Integration_Status__c</columns>
    <columns>ERP_Last_Integration_Response_Date__c</columns>
    <columns>ERP_Last_Integration_Error_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ERP_Last_Integration_Response_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ERP_Last_Integration_Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </filters>
    <label>Contracts with Oracle Sync Errors</label>
</ListView>